--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,25 +1,46 @@
-
-name: Publish to GitHub Pages
+name: Publish Docs via GitHub Pages
 
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: write    # allow checkout + push
+  pages: write
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      # 1️⃣ Grab your full Git history
+      - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Generate Docs from README
-        run: |
-          mkdir -p site
-          cp README.md site/index.md
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
+          fetch-depth: 0
+
+      # 2️⃣ Build your docs site
+      - name: Set up Python & install MkDocs
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: pip install mkdocs mkdocs-material  # adjust to your theme/plugins
+      - name: Build MkDocs site
+        run: mkdocs build
+
+      # 3️⃣ Configure Pages
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v3
+
+      # 4️⃣ Upload the generated site (MkDocs outputs to `site/`)
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: site/
+
+      # 5️⃣ Push to gh-pages
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
